style: refine background properties for mobile dark theme - Updated background position for workspace leaf content and tab container to 98% 97% for better alignment. - Added background repeat property to ensure consistent rendering across elements.

--- a/theme-beta.css
+++ b/theme-beta.css
@@ -2081,13 +2081,14 @@ body.is-mobile.theme-dark .nav-files-container {
   background-position: 98% 97%;
   background-repeat: no-repeat;
 }
-/* Add gradient to mobile UI elements -----
+/* Add gradient to mobile UI elements -----*/
 body.is-mobile.theme-dark .workspace-leaf-content {
   background: var(--background-gradient);
   background-color: var(--background-secondary);
   background-attachment: fixed;
   background-size: 100% 100%;
-  background-position: center;
+  background-position: 98% 97%;
+  background-repeat: no-repeat;
 }
 
 body.is-mobile.theme-dark .workspace-tab-container {
@@ -2095,9 +2096,10 @@ body.is-mobile.theme-dark .workspace-tab-container {
   background-color: var(--background-secondary);
   background-attachment: fixed;
   background-size: 100% 100%;
-  background-position: center;
+  background-position: 98% 97%;
+  background-repeat: no-repeat;
 }
-  */
+  
 
 /* property pillbox */
 body.is-mobile.theme-dark .metadata-container {
